day-5-hotstar-swiggy/path1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotstar-deployment
  labels:
    app: hotstar
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hotstar
  template:
    metadata:
      labels:
        app: hotstar
    spec:
      containers:
      - name: hotstar-container
        image: 211125314839.dkr.ecr.us-east-1.amazonaws.com/hotstar:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hotstar-service
  labels:
    app: hotstar
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: hotstar
