day-5-hotstar-swiggy/path2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swiggy-app
spec:
  replicas: 3  # Adjust as needed
  selector:
    matchLabels:
      app: swiggy
  template:
    metadata:
      labels:
        app: swiggy
    spec:
      containers:
        - name: swiggy-container
          image: 211125314839.dkr.ecr.us-east-1.amazonaws.com/swiggy
          ports:
            - containerPort: 80  # Adjust port if needed
          # Add more configuration like environment variables, volumes, etc. as necessary

---
apiVersion: v1
kind: Service
metadata:
  name: swiggy-service
spec:
  selector:
    app: swiggy
  ports:
    - protocol: TCP
      port: 80  # Service port
      targetPort: 80  # Port on the container
  type: LoadBalancer  # Change if you need different service type (NodePort, LoadBalancer, etc.)
